--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,15 +7,38 @@
     android:orientation="vertical"
     tools:context=".MainActivity">
 
-    <fragment
-        android:name="com.bitcodetech.fragments1.StackMarketFragment"
-        android:id="@+id/stockMarketFragment1"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content">
+
+        <Button
+            android:id="@+id/btnStart"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="8dp"
+            android:layout_weight="1"
+            android:text="Start" />
+
+        <Button
+            android:id="@+id/btnStop"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="8dp"
+            android:layout_weight="1"
+            android:text="Stop" />
+    </LinearLayout>
 
     <fragment
-        android:name="com.bitcodetech.fragments1.StackMarketFragment"
-        android:id="@+id/stockMarketFragment2"
+        android:id="@+id/stockMarketFragment1"
+        android:name="com.bitcodetech.fragments1.StockMarketFragment"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:tag="sf1" />
+
+    <fragment
+        android:id="@+id/stockMarketFragment2"
+        android:name="com.bitcodetech.fragments1.StockMarketFragment"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:tag="sf2" />
 </LinearLayout>
